# career-assistant

./: README.md
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: configs.py  database.py  main.py  schemas.py
backend/app/helpers/: courses_find.py  job_details.py  job_prompt_details.py  job_salary_predict.py  jobs_find.py  prompt_details.py  resume_analyzer.py  resume_export.py  resume_parser.py  roadmaps.py
backend/app/helpers/scrape_helper/: edx_scrape.py  naukri.py  simplyhired.py  webdriver.py  youtube_scrape.py  youtube_video_scrape.py
backend/app/routers/: auth.py  courses.py  dashboard.py  jobs.py  resumes.py
backend/app/templates/: verify.html
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: config.ts  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(auth)/components/: AuthForm.tsx  AuthModal.tsx
frontend/app/(auth)/helpers/: handle-error.ts  modal-alert.ts
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/logout/: page.tsx
frontend/app/(auth)/pending/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/app/(auth)/verify/: page.tsx
frontend/app/(careers)/careers/: page.tsx
frontend/app/(careers)/dashboard/: page.tsx
frontend/app/components/: Loading.tsx  UniversalModal.tsx
frontend/app/courses/: page.tsx
frontend/app/helpers/: api.ts  auth.ts  modal-manager.ts
frontend/app/settings/: page.tsx
frontend/store/: index.ts  provider.tsx
frontend/store/slices/: apiKeySlice.ts
(+44 files in other folders)
