[project]
name = "backend"
version = "0.1.0"
description = "Career Assistant Backend"
requires-python = ">=3.14"
dependencies = [
    "aiosmtplib>=5.0.0",
    "dnspython>=2.8.0",
    "fastapi[standard]>=0.128.0",
    "google-genai>=1.58.0",
    "passlib>=1.7.4",
    "pymongo>=4.16.0",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.22",
    "reportlab>=4.4.9",
    "selenium>=4.39.0",
]
